--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ exclude = [
 [dependencies]
 rosc = "0.4.3"
 log = "0.4.14"
+serde_json = "1.0.64"
+serde = { version = "1.0.124", features = ["derive"] }
+thiserror = "1.0.24"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
