Exclude CI stuff from packaging in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ categories = ["api-bindings", "multimedia::audio"]
 edition = "2018"
 
 exclude = [
+  ".semaphore/*",
   "assets/*",
+  "ci/*",
   "default.nix",
   "nix/*",
 ]
